Newsletter: Support for newsletter category definition and subscription
An organization can define newsletter categories. Subscribing users can select their categories of interest and will only receive newsletters that report on at least one of their subscribed categories.

TYPE: Feature
LINK: ogc-1725

--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -3625,6 +3625,21 @@ msgstr "Fai clic sul seguente collegamento per confermare l'iscrizione:"
 msgid "Confirm subscription"
 msgstr "Conferma l'Iscrizione"
 
+msgid "Newsletter Subscription"
+msgstr "Abbonamento alla newsletter "
+
+msgid "Update Newsletter Subscription"
+msgstr "Aggiornare l'abbonamento alla newsletter "
+
+msgid "Update Subscription"
+msgstr "Aggiornare l'abbonamento"
+
+msgid "To update your subscription categories click here:"
+msgstr "Per aggiornare le categorie di abbonamento, fare clic qui:"
+
+msgid "Update your newsletter subscription categories:"
+msgstr "Aggiornare le categorie di abbonamento alla newsletter:"
+
 msgid ""
 "If you did not subscribe to this newsletter you can simply ignore this e-"
 "mail."
@@ -4098,11 +4113,52 @@ msgstr ""
 msgid "Sign up to our newsletter to always stay up to date:"
 msgstr "Iscriviti alla nostra newsletter per rimanere sempre aggiornato:"
 
-msgid "Signup"
-msgstr "Registrati"
+# python-format
+msgid "Success! We have updated your subscribed categories to ${subscribed}."
+msgstr "Successo! Abbiamo aggiornato le categorie sottoscritte a ${subscribed}."
+
+msgid "Select newsletter categories your are interested in. You will receive "
+"the newsletter if it reports on at least one of the subscribed categories."
+msgstr "Selezionate le categorie di newsletter a cui siete interessati. "
+"Riceverete la newsletter se riporta almeno una delle categorie sottoscritte"
+
+msgid "Select categories the newsletter reports on. The users will receive the "
+"newsletter only if it reports on at least one of the categories the user "
+"subscribed to."
+msgstr "Selezionare le categorie per le quali viene segnalata la newsletter. "
+"Gli utenti riceveranno la newsletter solo se si riferisce ad almeno una "
+"delle categorie a cui l'utente si è iscritto."
+
+msgid "Example for newsletter topics with subtopics in yaml format. "
+"Note: Deeper structures are not supported."
+"\n"
+"```\n"
+"Organisation:\n"
+"  - Topic 1:\n"
+"    - Subtopic 1.1\n"
+"    - Subtopic 1.2\n"
+"  - Topic 2\n"
+"  - Topic 3:\n"
+"    - Subtopic 3.1\n"
+"```"
+msgstr "Esempio di argomenti di newsletter con sottoargomenti in formato yaml. "
+"Nota: Le strutture più profonde non sono supportate."
+"\n"
+"```\n"
+"Organizzazione:\n"
+" - Argomento 1:\n"
+"   - Sottotema 1.1\n"
+"   - Sottotema 1.2\n"
+" - Argomento 2\n"
+" - Argomento 3:\n"
+"   - Sottotema 3.1\n"
+"```"
 
 msgid "There are currently ${count} recipients registered."
 msgstr "Al momento ci sono ${count} destinatari registrati."
+
+msgid "Signup"
+msgstr "Registrati"
 
 msgid "Archive"
 msgstr "Archivia"
@@ -4960,10 +5016,14 @@ msgstr ""
 #, python-format
 msgid ""
 "Success! We have sent a confirmation link to ${address}, if we didn't send "
-"you one already."
+"you one already. Your subscribed categories are ${subscribed}."
 msgstr ""
 "La richiesta ha avuto esito positivo! Abbiamo inviato un collegamento di "
-"conferma a ${address}, se non te ne abbiamo già inviato uno."
+"conferma a ${address}, se non te ne abbiamo già inviato uno. Le categorie "
+"sottoscritte sono ${subscribed}."
+
+msgid "You subscribed to the following newsletter categories:"
+msgstr "Ti sei iscritto alle seguenti categorie di newsletter:"
 
 msgid "Notification for new entries"
 msgstr "Notifica per nuovi elementi"
@@ -5283,8 +5343,10 @@ msgid "Welcome to the ${org} Newsletter"
 msgstr "Benvenuto nella newsletter di ${org}"
 
 #, python-format
-msgid "Success! We have added ${address} to the list of recipients."
-msgstr "Successo! Abbiamo aggiunto ${indirizzo} alla lista dei destinatari."
+msgid "Success! We have added ${address} to the list of recipients. "
+"Subscribed categories are ${subscribed}."
+msgstr "Successo! Abbiamo aggiunto ${indirizzo} alla lista dei destinatari. "
+"Le categorie sottoscritte sono ${subscribed}."
 
 msgid "A newsletter with this name already exists"
 msgstr "Esiste già una newsletter con questo nome"
