--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -1086,6 +1086,21 @@ msgstr ""
 msgid "Confirm subscription"
 msgstr "Anmeldung bestätigen"
 
+msgid "Newsletter Subscription"
+msgstr "Newsletter-Abonnement"
+
+msgid "Update Newsletter Subscription"
+msgstr "Newsletter-Abonnement aktualisieren"
+
+msgid "Update subscription"
+msgstr "Abonnement aktualisieren"
+
+msgid "To update your subscription categories click here:"
+msgstr "Um Ihre Abonnementkategorien zu aktualisieren, klicken Sie hier:"
+
+msgid "Update your newsletter subscription categories:"
+msgstr "Aktualisieren Sie Ihre Newsletter-Abonnementkategorien:"
+
 msgid ""
 "If you did not subscribe to this newsletter you can simply ignore this e-"
 "mail."
@@ -1492,6 +1507,47 @@ msgstr "RSS Feed mit Ihrer aktuellen Auswahl an Hashtags"
 
 msgid "Subscribe to newsletter"
 msgstr "Newsletter abonnieren"
+
+msgid "Select newsletter categories your are interested in. You will receive "
+"the newsletter if it reports on at least one of the subscribed categories."
+msgstr "Wählen Sie die Newsletter-Kategorien aus, an denen Sie interessiert "
+"sind. Sie werden den Newsletter erhalten, wenn er über mindestens eine der "
+"abonnierten Kategorien berichtet."
+
+msgid "Select categories the newsletter reports on. The users will receive the "
+"newsletter only if it reports on at least one of the categories the user "
+"subscribed to."
+msgstr "Wählen Sie die Kategorien aus, über die der Newsletter berichtet. Die "
+"Benutzer erhalten den Newsletter nur, wenn er über mindestens eine der "
+"Kategorien berichtet, die der Benutzer abonniert hat."
+
+msgid "Newsletter categories"
+msgstr "Newsletter-Kategorien"
+
+msgid "Example for newsletter topics with subtopics in yaml format. "
+"Note: Deeper structures are not supported."
+"\n"
+"```\n"
+"Organisation:\n"
+"  - Topic 1:\n"
+"    - Subtopic 1.1\n"
+"    - Subtopic 1.2\n"
+"  - Topic 2\n"
+"  - Topic 3:\n"
+"    - Subtopic 3.1\n"
+"```"
+msgstr "Beispiel für Newsletter-Themen mit Unterthemen im yaml-Format. "
+"Hinweis: Tiefere Strukturen werden nicht unterstützt."
+"\n"
+"```\n"
+"Organisation:\n"
+"  - Thema 1:\n"
+"    - Unterthema 1.1\n"
+"    - Unterthema 1.2\n"
+"  - Thema 2\n"
+"  - Thema 3:\n"
+"    - Unterthema 3.1\n"
+"```"
 
 msgid "Receive the newsletter by email"
 msgstr "Newsletter per E-Mail erhalten"
