--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -3627,6 +3627,21 @@ msgstr ""
 msgid "Confirm subscription"
 msgstr "Anmeldung bestätigen"
 
+msgid "Newsletter Subscription"
+msgstr "Newsletter-Abonnement"
+
+msgid "Update Newsletter Subscription"
+msgstr "Newsletter-Abonnement aktualisieren"
+
+msgid "Update subscription"
+msgstr "Abonnement aktualisieren"
+
+msgid "To update your subscription categories click here:"
+msgstr "Um Ihre Abonnementkategorien zu aktualisieren, klicken Sie hier:"
+
+msgid "Update your newsletter subscription categories:"
+msgstr "Aktualisieren Sie Ihre Newsletter-Abonnementkategorien:"
+
 msgid ""
 "If you did not subscribe to this newsletter you can simply ignore this e-"
 "mail."
@@ -4100,14 +4115,57 @@ msgstr ""
 "eingeloggt sind."
 
 msgid "Sign up to our newsletter to always stay up to date:"
-msgstr ""
-"Abonnieren Sie unseren Newsletter um immer auf dem Laufenden zu bleiben:"
+msgstr "Abonnieren Sie unseren Newsletter um immer auf dem Laufenden zu "
+"bleiben:"
 
-msgid "Signup"
-msgstr "Abonnieren"
+# python-format
+msgid "Success! We have updated your subscribed categories to ${subscribed}."
+msgstr "Erfolg! Wir haben Ihre abonnierten Kategorien aktualisiert auf "
+"${subscribed}."
+
+msgid "Select newsletter categories your are interested in. You will receive "
+"the newsletter if it reports on at least one of the subscribed categories."
+msgstr "Wählen Sie die Newsletter-Kategorien aus, an denen Sie interessiert "
+"sind. Sie werden den Newsletter erhalten, wenn er über mindestens eine der "
+"abonnierten Kategorien berichtet."
+
+msgid "Select categories the newsletter reports on. The users will receive the "
+"newsletter only if it reports on at least one of the categories the user "
+"subscribed to."
+msgstr "Wählen Sie die Kategorien aus, über die der Newsletter berichtet. Die "
+"Benutzer erhalten den Newsletter nur, wenn er über mindestens eine der "
+"Kategorien berichtet, die der Benutzer abonniert hat."
+
+msgid "Example for newsletter topics with subtopics in yaml format. "
+"Note: Deeper structures are not supported."
+"\n"
+"```\n"
+"Organisation:\n"
+"  - Topic 1:\n"
+"    - Subtopic 1.1\n"
+"    - Subtopic 1.2\n"
+"  - Topic 2\n"
+"  - Topic 3:\n"
+"    - Subtopic 3.1\n"
+"```"
+msgstr "Beispiel für Newsletter-Themen mit Unterthemen im yaml-Format. "
+"Hinweis: Tiefere Strukturen werden nicht unterstützt."
+"\n"
+"```\n"
+"Organisation:\n"
+"  - Thema 1:\n"
+"    - Unterthema 1.1\n"
+"    - Unterthema 1.2\n"
+"  - Thema 2\n"
+"  - Thema 3:\n"
+"    - Unterthema 3.1\n"
+"```"
 
 msgid "There are currently ${count} recipients registered."
 msgstr "Zur Zeit sind ${count} Abonnenten registriert."
+
+msgid "Signup"
+msgstr "Abonnieren"
 
 msgid "Archive"
 msgstr "Archiv"
@@ -4961,10 +5019,14 @@ msgstr ""
 #, python-format
 msgid ""
 "Success! We have sent a confirmation link to ${address}, if we didn't send "
-"you one already."
+"you one already. Your subscribed categories are ${subscribed}."
 msgstr ""
 "Erfolg! Wir senden eine E-Mail zur Bestätigung Ihres Abonnements an "
-"${address}, sofern Sie noch nicht angemeldet sind."
+"${address}, sofern Sie noch nicht angemeldet sind. Ihre abonnierten "
+"Kategorien sind ${subscribed}."
+
+msgid "You subscribed to the following newsletter categories:"
+msgstr "Sie haben folgende Newsletter-Kategorien abonniert:"
 
 msgid "Notification for new entries"
 msgstr "Benachrichtigung bei neuen Einträgen"
@@ -5275,8 +5337,10 @@ msgid "Welcome to the ${org} Newsletter"
 msgstr "Willkommen beim ${org} Newsletter"
 
 #, python-format
-msgid "Success! We have added ${address} to the list of recipients."
-msgstr "Erfolg! Wir haben ${address} zur Liste der Empfänger hinzugefügt."
+msgid "Success! We have added ${address} to the list of recipients. "
+"Subscribed categories are ${subscribed}."
+msgstr "Erfolg! Wir haben ${address} zur Liste der Empfänger hinzugefügt. "
+"Abonnierte Kategorien sind ${subscribed}."
 
 msgid "A newsletter with this name already exists"
 msgstr "Ein Newsletter mit diesem Namen existiert bereits"
