--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -3631,6 +3631,21 @@ msgstr "Veuillez cliquer sur le lien suivant pour confirmer votre abonnement:"
 msgid "Confirm subscription"
 msgstr "Confirmer l'abonnement"
 
+msgid "Newsletter Subscription"
+msgstr "Abonnement à la newsletter "
+
+msgid "Update Newsletter Subscription"
+msgstr "Mettre à jour l'abonnement à la lettre d'information"
+
+msgid "Update Subscription"
+msgstr "Mise à jour de l'abonnement"
+
+msgid "To update your subscription categories click here:"
+msgstr "Pour mettre à jour vos catégories d'abonnement, cliquez ici:"
+
+msgid "Update your newsletter subscription categories:"
+msgstr "Mettre à jour les catégories d'abonnement à la newsletter:"
+
 msgid ""
 "If you did not subscribe to this newsletter you can simply ignore this e-"
 "mail."
@@ -4110,11 +4125,53 @@ msgstr ""
 "Abonnez-vous à notre lettre d'informations pour rester au courant en "
 "permanence :"
 
-msgid "Signup"
-msgstr "S'abonner"
+# python-format
+msgid "Success! We have updated your subscribed categories to ${subscribed}."
+msgstr "Succès! Nous avons mis à jour vos catégories abonnées à ${subscribed}."
+
+msgid "Select newsletter categories your are interested in. You will receive "
+"the newsletter if it reports on at least one of the subscribed categories."
+msgstr "Sélectionnez les catégories de lettres d'information qui vous "
+"intéressent. Vous recevrez la newsletter si elle traite d'au moins une des "
+"catégories souscrites."
+
+msgid "Select categories the newsletter reports on. The users will receive the "
+"newsletter only if it reports on at least one of the categories the user "
+"subscribed to."
+msgstr "Sélectionnez les catégories sur lesquelles la lettre d'information "
+"porte. Les utilisateurs ne recevront la lettre d'information que si elle "
+"concerne au moins l'une des catégories auxquelles l'utilisateur s'est abonné."
+
+msgid "Example for newsletter topics with subtopics in yaml format. "
+"Note: Deeper structures are not supported."
+"\n"
+"```\n"
+"Organisation:\n"
+"  - Topic 1:\n"
+"    - Subtopic 1.1\n"
+"    - Subtopic 1.2\n"
+"  - Topic 2\n"
+"  - Topic 3:\n"
+"    - Subtopic 3.1\n"
+"```"
+msgstr "Exemple de sujets de newsletter avec des sous-sujets au format yaml. "
+"Note : Les structures plus profondes ne sont pas prises en charge. "
+"\n"
+"```\n"
+"Organisation:\n"
+"  - Thème 1:\n"
+"  - Sous-thème 1.1\n"
+"  - Sous-thème 1.2\n"
+"  - Thème 2\n"
+"  - Thème 3:\n"
+"  - Sous-thème 3.1"
+"```"
 
 msgid "There are currently ${count} recipients registered."
 msgstr "Il y a actuellement ${count} destinataires enregistrés."
+
+msgid "Signup"
+msgstr "S'abonner"
 
 msgid "Archive"
 msgstr "Archiver"
@@ -4980,10 +5037,15 @@ msgstr ""
 #, python-format
 msgid ""
 "Success! We have sent a confirmation link to ${address}, if we didn't send "
-"you one already."
+"you one already. Your subscribed categories are ${subscribed}."
 msgstr ""
-"C'est fait ! Nous avons envoyé un lien de confirmation vers ${address}, si "
-"nous ne vous en avions pas déjà envoyé un."
+"C'est fait! Nous avons envoyé un lien de confirmation vers ${address}, si "
+"nous ne vous en avions pas déjà envoyé un. Vos catégories abonnées sont "
+"${subscribed}."
+
+msgid "You subscribed to the following newsletter categories:"
+msgstr "Vous vous êtes abonné aux catégories de lettres d'information "
+"suivantes:"
 
 msgid "Notification for new entries"
 msgstr "Notification pour les nouvelles entrées"
@@ -5296,8 +5358,10 @@ msgid "Welcome to the ${org} Newsletter"
 msgstr "Bienvenue sur la lettre d'information ${org}"
 
 #, python-format
-msgid "Success! We have added ${address} to the list of recipients."
-msgstr "Succès! Nous avons ajouté ${address} à la liste des destinataires."
+msgid "Success! We have added ${address} to the list of recipients. "
+"Subscribed categories are ${subscribed}."
+msgstr "Succès! Nous avons ajouté ${address} à la liste des destinataires. "
+"Les catégories abonnées sont ${subscribed}."
 
 msgid "A newsletter with this name already exists"
 msgstr "Il existe déjà une lettre d'information avec ce nom"
