--- a/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
@@ -1084,6 +1084,21 @@ msgstr "Veuillez cliquer sur le lien suivant pour confirmer votre abonnement:"
 msgid "Confirm subscription"
 msgstr "Confirmer l'abonnement"
 
+msgid "Newsletter Subscription"
+msgstr "Abonnement à la newsletter "
+
+msgid "Update Newsletter Subscription"
+msgstr "Mettre à jour l'abonnement à la lettre d'information"
+
+msgid "Update subscription"
+msgstr "Mise à jour de l'abonnement"
+
+msgid "To update your subscription categories click here:"
+msgstr "Pour mettre à jour vos catégories d'abonnement, cliquez ici:"
+
+msgid "Update your newsletter subscription categories:"
+msgstr "Mettre à jour les catégories d'abonnement à la newsletter:"
+
 msgid ""
 "If you did not subscribe to this newsletter you can simply ignore this e-"
 "mail."
@@ -1491,6 +1506,45 @@ msgstr "Flux RSS avec votre sélection actuelle d'étiquettes"
 
 msgid "Subscribe to newsletter"
 msgstr "Souscrire à la lettre d'informations"
+
+msgid "Select newsletter categories your are interested in. You will receive "
+"the newsletter if it reports on at least one of the subscribed categories."
+msgstr "Sélectionnez les catégories de lettres d'information qui vous "
+"intéressent. Vous recevrez la newsletter si elle traite d'au moins une des "
+"catégories souscrites."
+
+msgid "Select categories the newsletter reports on. The users will receive the "
+"newsletter only if it reports on at least one of the categories the user "
+"subscribed to."
+msgstr "Sélectionnez les catégories sur lesquelles la lettre d'information "
+"porte. Les utilisateurs ne recevront la lettre d'information que si elle "
+"concerne au moins l'une des catégories auxquelles l'utilisateur s'est abonné."
+
+msgid "Example for newsletter topics with subtopics in yaml format. "
+"Note: Deeper structures are not supported."
+"\n"
+"```\n"
+"Organisation:\n"
+"  - Topic 1:\n"
+"    - Subtopic 1.1\n"
+"    - Subtopic 1.2\n"
+"  - Topic 2\n"
+"  - Topic 3:\n"
+"    - Subtopic 3.1\n"
+"```"
+msgstr "Exemple de sujets de newsletter avec des sous-sujets au format yaml. "
+"Note : Les structures plus profondes ne sont pas prises en charge. "
+"\n"
+"```\n"
+"Organisation:\n"
+"  - Thème 1:\n"
+"  - Sous-thème 1.1\n"
+"  - Sous-thème 1.2\n"
+"  - Thème 2\n"
+"  - Thème 3:\n"
+"  - Sous-thème 3.1"
+"```"
+
 
 msgid "Receive the newsletter by email"
 msgstr "Recevoir la lettre d'informations par e-mail"
