--- a/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
@@ -1078,7 +1078,22 @@ msgstr "Fai clic sul seguente collegamento per confermare l'iscrizione:"
 
 #, fuzzy
 msgid "Confirm subscription"
-msgstr "Conferma"
+msgstr "Conferma l'Iscrizione"
+
+msgid "Newsletter Subscription"
+msgstr "Abbonamento alla newsletter "
+
+msgid "Update Newsletter Subscription"
+msgstr "Aggiornare l'abbonamento alla newsletter "
+
+msgid "Update Subscription"
+msgstr "Aggiornare l'abbonamento"
+
+msgid "To update your subscription categories click here:"
+msgstr "Per aggiornare le categorie di abbonamento, fare clic qui:"
+
+msgid "Update your newsletter subscription categories:"
+msgstr "Aggiornare le categorie di abbonamento alla newsletter:"
 
 msgid ""
 "If you did not subscribe to this newsletter you can simply ignore this e-"
@@ -1480,6 +1495,43 @@ msgstr "Feed RSS con la tua selezione corrente di tag"
 
 msgid "Subscribe to newsletter"
 msgstr "Iscriviti alla newsletter"
+
+msgid "Select newsletter categories your are interested in. You will receive "
+"the newsletter if it reports on at least one of the subscribed categories."
+msgstr "Selezionate le categorie di newsletter a cui siete interessati. "
+"Riceverete la newsletter se riporta almeno una delle categorie sottoscritte"
+
+msgid "Select categories the newsletter reports on. The users will receive the "
+"newsletter only if it reports on at least one of the categories the user "
+"subscribed to."
+msgstr "Selezionare le categorie per le quali viene segnalata la newsletter. "
+"Gli utenti riceveranno la newsletter solo se si riferisce ad almeno una "
+"delle categorie a cui l'utente si è iscritto."
+
+msgid "Example for newsletter topics with subtopics in yaml format. "
+"Note: Deeper structures are not supported."
+"\n"
+"```\n"
+"Organisation:\n"
+"  - Topic 1:\n"
+"    - Subtopic 1.1\n"
+"    - Subtopic 1.2\n"
+"  - Topic 2\n"
+"  - Topic 3:\n"
+"    - Subtopic 3.1\n"
+"```"
+msgstr "Esempio di argomenti di newsletter con sottoargomenti in formato yaml. "
+"Nota: Le strutture più profonde non sono supportate."
+"\n"
+"```\n"
+"Organizzazione:\n"
+" - Argomento 1:\n"
+"   - Sottotema 1.1\n"
+"   - Sottotema 1.2\n"
+" - Argomento 2\n"
+" - Argomento 3:\n"
+"   - Sottotema 3.1\n"
+"```"
 
 msgid "Receive the newsletter by email"
 msgstr "Ricevi la newsletter via e-mail"
